--- a/app/views/hakija/maksatusHakemus.html
+++ b/app/views/hakija/maksatusHakemus.html
@@ -128,7 +128,7 @@
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Haettava valtionavustus</label>
                   <input name="psa1haettavaavustus" type="text" min="-0.0001" ng-currency=""
-                         class="form-control" tooltip-html-unsafe="{{tooltipArvot['psa1haettavaavustus']}}"
+                         noenter class="form-control" tooltip-html-unsafe="{{tooltipArvot['psa1haettavaavustus']}}"
                          tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="psa1haettavaavustus"
@@ -142,7 +142,7 @@
               <div class="col-md-6">
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Kunnan oma rahoitusosuus</label>
-                  <input name="psa1omarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
+                  <input name="psa1omarahoitus" type="text" min="-0.0001" ng-currency="" noenter class="form-control"
                          tooltip-html-unsafe="{{tooltipArvot['psa1omarahoitus']}}" tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="psa1omarahoitus"
@@ -174,7 +174,7 @@
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Haettava valtionavustus</label>
                   <input name="psa2haettavaavustus" type="text" min="-0.0001" ng-currency=""
-                         class="form-control" tooltip-html-unsafe="{{tooltipArvot['psa2haettavaavustus']}}"
+                         noenter class="form-control" tooltip-html-unsafe="{{tooltipArvot['psa2haettavaavustus']}}"
                          tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="psa2haettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
@@ -187,7 +187,7 @@
               <div class="col-md-6">
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Kunnan oma rahoitusosuus</label>
-                  <input name="psa2omarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
+                  <input name="psa2omarahoitus" type="text" min="-0.0001" ng-currency="" noenter class="form-control"
                          tooltip-html-unsafe="{{tooltipArvot['psa2omarahoitus']}}" tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="psa2omarahoitus"
@@ -219,7 +219,7 @@
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Haettava valtionavustus</label>
                   <input name="psamhaettavaavustus" type="text" min="-0.0001" ng-currency=""
-                         class="form-control" tooltip-html-unsafe="{{tooltipArvot['psamhaettavaavustus']}}"
+                         noenter class="form-control" tooltip-html-unsafe="{{tooltipArvot['psamhaettavaavustus']}}"
                          tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="psamhaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
@@ -232,7 +232,7 @@
               <div class="col-md-6">
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Kunnan oma rahoitusosuus</label>
-                  <input name="psamomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
+                  <input name="psamomarahoitus" type="text" min="-0.0001" ng-currency="" noenter class="form-control"
                          tooltip-html-unsafe="{{tooltipArvot['psamomarahoitus']}}" tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="psamomarahoitus"
@@ -281,7 +281,7 @@
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Haettava valtionavustus</label>
                   <input name="hkslhaettavaavustus" type="text" min="-0.0001" ng-currency=""
-                         class="form-control" tooltip-html-unsafe="{{tooltipArvot['hkslhaettavaavustus']}}"
+                         noenter class="form-control" tooltip-html-unsafe="{{tooltipArvot['hkslhaettavaavustus']}}"
                          tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="hkslhaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
@@ -294,7 +294,7 @@
               <div class="col-md-6">
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Kunnan oma rahoitusosuus</label>
-                  <input name="hkslomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
+                  <input name="hkslomarahoitus" type="text" min="-0.0001" ng-currency="" noenter class="form-control"
                          tooltip-html-unsafe="{{tooltipArvot['hkslomarahoitus']}}" tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="hkslomarahoitus"
@@ -326,7 +326,7 @@
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Haettava valtionavustus</label>
                   <input name="hkklhaettavaavustus" type="text" min="-0.0001" ng-currency=""
-                         class="form-control" tooltip-html-unsafe="{{tooltipArvot['hkklhaettavaavustus']}}"
+                         noenter class="form-control" tooltip-html-unsafe="{{tooltipArvot['hkklhaettavaavustus']}}"
                          tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="hkklhaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
@@ -339,7 +339,7 @@
               <div class="col-md-6">
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Kunnan oma rahoitusosuus</label>
-                  <input name="hkklomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
+                  <input name="hkklomarahoitus" type="text" min="-0.0001" ng-currency="" noenter class="form-control"
                          tooltip-html-unsafe="{{tooltipArvot['hkklomarahoitus']}}" tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="hkklomarahoitus"
@@ -371,7 +371,7 @@
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Haettava valtionavustus</label>
                   <input name="hkllhaettavaavustus" type="text" min="-0.0001" ng-currency=""
-                         class="form-control" tooltip-html-unsafe="{{tooltipArvot['hkllhaettavaavustus']}}"
+                         noenter class="form-control" tooltip-html-unsafe="{{tooltipArvot['hkllhaettavaavustus']}}"
                          tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="hkllhaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
@@ -384,7 +384,7 @@
               <div class="col-md-6">
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Kunnan oma rahoitusosuus</label>
-                  <input name="hkllomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
+                  <input name="hkllomarahoitus" type="text" min="-0.0001" ng-currency="" noenter class="form-control"
                          tooltip-html-unsafe="{{tooltipArvot['hkllomarahoitus']}}" tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="hkllomarahoitus"
@@ -416,7 +416,7 @@
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Haettava valtionavustus</label>
                   <input name="hktlhaettavaavustus" type="text" min="-0.0001" ng-currency=""
-                         class="form-control" tooltip-html-unsafe="{{tooltipArvot['hktlhaettavaavustus']}}"
+                         noenter class="form-control" tooltip-html-unsafe="{{tooltipArvot['hktlhaettavaavustus']}}"
                          tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="hktlhaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
@@ -429,7 +429,7 @@
               <div class="col-md-6">
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Kunnan oma rahoitusosuus</label>
-                  <input name="hktlomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
+                  <input name="hktlomarahoitus" type="text" min="-0.0001" ng-currency="" noenter class="form-control"
                          tooltip-html-unsafe="{{tooltipArvot['hktlomarahoitus']}}" tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="hktlomarahoitus"
@@ -477,7 +477,7 @@
               <div class="col-md-6">
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Haettava valtionavustus</label>
-                  <input name="kimhaettavaavustus" type="text" min="-0.0001" ng-currency="" class="form-control"
+                  <input name="kimhaettavaavustus" type="text" min="-0.0001" ng-currency="" noenter class="form-control"
                          tooltip-html-unsafe="{{tooltipArvot['kimhaettavaavustus']}}" tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="kimhaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
@@ -490,7 +490,7 @@
               <div class="col-md-6">
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Kunnan oma rahoitusosuus</label>
-                  <input name="kimomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
+                  <input name="kimomarahoitus" type="text" min="-0.0001" ng-currency="" noenter class="form-control"
                          tooltip-html-unsafe="{{tooltipArvot['kimomarahoitus']}}" tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="kimomarahoitus"
@@ -522,7 +522,7 @@
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Haettava valtionavustus</label>
                   <input name="kmpkhaettavaavustus" type="text" min="-0.0001" ng-currency=""
-                         class="form-control" tooltip-html-unsafe="{{tooltipArvot['kmpkhaettavaavustus']}}"
+                         noenter class="form-control" tooltip-html-unsafe="{{tooltipArvot['kmpkhaettavaavustus']}}"
                          tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="kmpkhaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
@@ -535,7 +535,7 @@
               <div class="col-md-6">
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Kunnan oma rahoitusosuus</label>
-                  <input name="kmpkomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
+                  <input name="kmpkomarahoitus" type="text" min="-0.0001" ng-currency="" noenter class="form-control"
                          tooltip-html-unsafe="{{tooltipArvot['kmpkomarahoitus']}}" tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="kmpkomarahoitus"
@@ -566,7 +566,7 @@
               <div class="col-md-6">
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Haettava valtionavustus</label>
-                  <input name="kmkhaettavaavustus" type="text" min="-0.0001" ng-currency="" class="form-control"
+                  <input name="kmkhaettavaavustus" type="text" min="-0.0001" ng-currency="" noenter class="form-control"
                          tooltip-html-unsafe="{{tooltipArvot['kmkhaettavaavustus']}}" tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="kmkhaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
@@ -579,7 +579,7 @@
               <div class="col-md-6">
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Kunnan oma rahoitusosuus</label>
-                  <input name="kmkomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
+                  <input name="kmkomarahoitus" type="text" min="-0.0001" ng-currency="" noenter class="form-control"
                          tooltip-html-unsafe="{{tooltipArvot['kmkomarahoitus']}}" tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="kmkomarahoitus"
@@ -610,7 +610,7 @@
               <div class="col-md-6">
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Haettava valtionavustus</label>
-                  <input name="krthaettavaavustus" type="text" min="-0.0001" ng-currency="" class="form-control"
+                  <input name="krthaettavaavustus" type="text" min="-0.0001" ng-currency="" noenter class="form-control"
                          tooltip-html-unsafe="{{tooltipArvot['krthaettavaavustus']}}" tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="krthaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
@@ -623,7 +623,7 @@
               <div class="col-md-6">
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Kunnan oma rahoitusosuus</label>
-                  <input name="krtomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
+                  <input name="krtomarahoitus" type="text" min="-0.0001" ng-currency="" noenter class="form-control"
                          tooltip-html-unsafe="{{tooltipArvot['krtomarahoitus']}}" tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="krtomarahoitus"
@@ -654,7 +654,7 @@
               <div class="col-md-6">
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Haettava valtionavustus</label>
-                  <input name="kmhaettavaavustus" type="text" min="-0.0001" ng-currency="" class="form-control"
+                  <input name="kmhaettavaavustus" type="text" min="-0.0001" ng-currency="" noenter class="form-control"
                          tooltip-html-unsafe="{{tooltipArvot['kmhaettavaavustus']}}" tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="kmhaettavaavustus" ui-validate="{positiivinenArvo: 'positiivinenArvo($value)'}"/>
@@ -667,7 +667,7 @@
               <div class="col-md-6">
                 <div class="form-group" show-errors="{showSuccess: true}">
                   <label>Kunnan oma rahoitusosuus</label>
-                  <input name="kmomarahoitus" type="text" min="-0.0001" ng-currency="" class="form-control"
+                  <input name="kmomarahoitus" type="text" min="-0.0001" ng-currency="" noenter class="form-control"
                          tooltip-html-unsafe="{{tooltipArvot['kmomarahoitus']}}" tooltip-trigger="focus"
                          tooltip-placement="top"
                          ng-model="kmomarahoitus"
