--- a/app/views/hakija/hakemus.html
+++ b/app/views/hakija/hakemus.html
@@ -570,7 +570,7 @@
                   <div ng-show="(hakemus.hakemustilatunnus == 'K')">
                     <div ng-show="l.liitenumero!=editoitavaLiite">
                       <p><i class="glyphicon glyphicon-file"></i>
-                        <a href="api/hakemus/{{hakemusid}}/liite/{{l.liitenumero}}">{{l.nimi}}
+                        <a href="api/hakemus/{{hakemusid}}/liite/{{l.liitenumero}}" target="_blank">{{l.nimi}}
                           ({{l.contenttype}})</a>
                         <a href="" title="Muuta liitenimi" ng-click="asetaEditTilaan(l.liitenumero)"><span
                           class='glyphicon glyphicon-pencil'></span></a>
