--- a/app/views/hakija/hakemusEsikatselu.html
+++ b/app/views/hakija/hakemusEsikatselu.html
@@ -464,7 +464,7 @@
             <div ng-show="liitteet.length > 0" class="response">
               <div class="sel-file" ng-repeat="l in liitteet">
                 <p><i class="glyphicon glyphicon-file"></i>
-                  <a href="api/hakemus/{{hakemusid}}/liite/{{l.liitenumero}}">{{l.nimi}} ({{l.contenttype}})</a>
+                  <a href="api/hakemus/{{hakemusid}}/liite/{{l.liitenumero}}" target="_blank">{{l.nimi}} ({{l.contenttype}})</a>
                 </p>
               </div>
             </div>
