--- a/app/views/kasittelija/hakemus.html
+++ b/app/views/kasittelija/hakemus.html
@@ -484,7 +484,7 @@
               <div ng-show="liitteet.length > 0" class="response">
                 <div class="sel-file" ng-repeat="l in liitteet">
                   <p><i class="glyphicon glyphicon-file"></i>
-                    <a href="api/hakemus/{{hakemus.id}}/liite/{{l.liitenumero}}">{{l.nimi}} ({{l.contenttype}})</a>
+                    <a href="api/hakemus/{{hakemus.id}}/liite/{{l.liitenumero}}" target="_blank">{{l.nimi}} ({{l.contenttype}})</a>
                   </p>
                 </div>
               </div>
