--- a/app/views/kasittelija/hakemuskaudenHallinta.html
+++ b/app/views/kasittelija/hakemuskaudenHallinta.html
@@ -103,7 +103,7 @@
                 </p>
               </div>
               <div class="row">
-                <div class="hakemuskausi-panel-hakuaika">
+                <div class="row hakemuskausi-panel-hakuaika">
                   <p>Hakuaika:</p>
 
                   <p>{{hakemuskausi.avustushakemusAlkupvm | date:'dd.MM yyyy'}}-{{hakemuskausi.avustushakemusLoppupvm |
@@ -161,7 +161,7 @@
                 </p>
               </div>
               <div class="row">
-                <div class="hakemuskausi-panel-hakuaika">
+                <div class="row hakemuskausi-panel-hakuaika">
 
                   <p>Hakuaika:</p>
 
@@ -221,7 +221,7 @@
                 </p>
               </div>
               <div class="row">
-                <div class="hakemuskausi-panel-hakuaika">
+                <div class="row hakemuskausi-panel-hakuaika">
 
                   <p>Hakuaika:</p>
 
