--- a/app/views/kasittelija/hakemuskaudenHallinta.html
+++ b/app/views/kasittelija/hakemuskaudenHallinta.html
@@ -6,7 +6,7 @@
           <h1>{{hakemuskausi.vuosi}}</h1>
 
           <div ng-show="hakemuskausi.tilatunnus=='A'">
-            <a href="api/hakemuskausi/{{hakemuskausi.vuosi}}/hakuohje" class="btn btn-primary">Hakuohjeet
+            <a href="api/hakemuskausi/{{hakemuskausi.vuosi}}/hakuohje" class="btn btn-primary" target="_blank">Hakuohjeet
               {{hakemuskausi.vuosi}}</a>
           </div>
           <div ng-hide="hakemuskausi.tilatunnus=='A'">
@@ -49,7 +49,7 @@
       <div class="row">
         <div class="col-md-3 text-center">
           <h1>{{hakemuskausi.vuosi}}</h1>
-          <a href="api/hakemuskausi/{{hakemuskausi.vuosi}}/hakuohje" class="btn btn-primary">Hakuohjeet
+          <a href="api/hakemuskausi/{{hakemuskausi.vuosi}}/hakuohje" class="btn btn-primary" target="_blank">Hakuohjeet
             {{hakemuskausi.vuosi}}</a>
           <br>
           <br>
